@@ -188,6 +188,7 @@ font
 
     font-load
         font.ADD_FONT                           X11 WIN OSX
+        font.HAVE_FONT                          X11 WIN OSX
         font.SET_DPI                            X11 WIN OSX
 
     font-align
